<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tide"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tide" />
        <item
            android:id="@+id/nav_suggest"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_suggest" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_help" />
    </group>
</menu>