<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myfishingnote.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tide"
        android:name="com.example.myfishingnote.ui.tide.TideFragment"
        android:label="@string/menu_tide"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_suggest"
        android:name="com.example.myfishingnote.ui.suggest.SuggestFragment"
        android:label="@string/menu_suggest"
        tools:layout="@layout/fragment_suggest" />
    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.myfishingnote.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.myfishingnote.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
</navigation>